force-app/main/default/objects/Individual_Application_Shadow__c/Individual_Application_Shadow__c.object-meta.xml
<CustomObject>
    <label>Individual_Application_Shadow</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Individual_Application_Shadow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shadow Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>