force-app/main/default/objects/Individual_Application_Shadow__c/fields/Aboriginal_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Aboriginal_Applicants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aboriginal Applicants</label>
    <type>Checkbox</type>
</CustomField>