force-app/main/default/objects/Individual_Application_Shadow__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shadow Applications</relationshipLabel>
    <relationshipName>Shadow_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>