force-app/main/default/objects/Individual_Application_Shadow__c/fields/AccountEmail__c.field-meta.xml
<CustomField>
    <fullName>AccountEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountEmail</label>
    <type>Email</type>
</CustomField>