force-app/main/default/objects/Individual_Application_Shadow__c/fields/Applicant_1_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant 1 Phone Number</label>
    <type>Phone</type>
</CustomField>