force-app/main/default/objects/Individual_Application_Shadow__c/fields/Applicant_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>