force-app/main/default/objects/Individual_Application_Shadow__c/fields/Applicant_Title__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>