force-app/main/default/objects/Individual_Application_Shadow__c/fields/ApplicantEmail1__c.field-meta.xml
<CustomField>
    <fullName>ApplicantEmail1__c</fullName>
    <description>This field stores the email value of Applicant Email.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ApplicantEmail1</label>
    <type>Email</type>
</CustomField>