force-app/main/default/objects/Individual_Application_Shadow__c/fields/ApplicantEmail2__c.field-meta.xml
<CustomField>
    <fullName>ApplicantEmail2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ApplicantEmail2</label>
    <type>Email</type>
</CustomField>