force-app/main/default/objects/Individual_Application_Shadow__c/fields/ApplicantEmail3__c.field-meta.xml
<CustomField>
    <fullName>ApplicantEmail3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ApplicantEmail3</label>
    <type>Email</type>
</CustomField>