force-app/main/default/objects/Individual_Application_Shadow__c/fields/ApplicantNames__c.field-meta.xml
<CustomField>
    <fullName>ApplicantNames__c</fullName>
    <formula>Individual_Application__r.ApplicantNames__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Names</label>
    <type>Text</type>
</CustomField>