force-app/main/default/objects/Individual_Application_Shadow__c/fields/ApplicantNamesAnd__c.field-meta.xml
<CustomField>
    <fullName>ApplicantNamesAnd__c</fullName>
    <description>Concatenation of applicants&apos; full names with &quot;and&quot; preceding the last applicant.</description>
    <formula>Given_Name_Applicant_1__c &amp;
&quot; &quot; &amp;
Family_Name_Applicant_1__c &amp;
if (AND(!isblank(Family_Name_Applicant_2__c),isblank(Family_Name_Applicant_3__c),isblank(Family_Name_Applicant_4__c)),&quot; and &quot;,&quot;&quot;) &amp;
if (AND(isblank(Family_Name_Applicant_2__c),!isblank(Family_Name_Applicant_3__c),isblank(Family_Name_Applicant_4__c)),&quot; and &quot;,&quot;&quot;) &amp;
if (AND(isblank(Family_Name_Applicant_2__c),isblank(Family_Name_Applicant_3__c),!isblank(Family_Name_Applicant_4__c)),&quot; and &quot;,&quot;&quot;) &amp;
if (AND(!isblank(Family_Name_Applicant_2__c),!isblank(Family_Name_Applicant_3__c),isblank(Family_Name_Applicant_4__c)),&quot;, &quot;,&quot;&quot;) &amp;
if (AND(!isblank(Family_Name_Applicant_2__c),isblank(Family_Name_Applicant_3__c),!isblank(Family_Name_Applicant_4__c)),&quot;, &quot;,&quot;&quot;) &amp;
if (AND(isblank(Family_Name_Applicant_2__c),!isblank(Family_Name_Applicant_3__c),!isblank(Family_Name_Applicant_4__c)),&quot;, &quot;,&quot;&quot;) &amp;
if (AND(!isblank(Family_Name_Applicant_2__c),!isblank(Family_Name_Applicant_3__c),!isblank(Family_Name_Applicant_4__c)),&quot;, &quot;,&quot;&quot;) &amp;
Given_Name_Applicant_2__c &amp;
if(isblank(Family_Name_Applicant_2__c),&quot;&quot;,&quot; &quot;) &amp;
Family_Name_Applicant_2__c &amp;
if (AND(!isblank(Family_Name_Applicant_3__c),isblank(Family_Name_Applicant_4__c)),&quot; and &quot;,&quot;&quot;) &amp;
if (AND(isblank(Family_Name_Applicant_3__c),!isblank(Family_Name_Applicant_4__c)),&quot; and &quot;,&quot;&quot;) &amp;
if (AND(!isblank(Family_Name_Applicant_3__c),!isblank(Family_Name_Applicant_4__c)),&quot;, &quot;,&quot;&quot;) &amp;
Given_Name_Applicant_3__c &amp;
if(isblank(Family_Name_Applicant_3__c),&quot;&quot;,&quot; &quot;) &amp;
Family_Name_Applicant_3__c &amp;
if (isblank(Family_Name_Applicant_4__c),&quot;&quot;,&quot; and &quot;) &amp;
Given_Name_Applicant_4__c &amp;
if(isblank(Family_Name_Applicant_4__c),&quot;&quot;,&quot; &quot;) &amp;
Family_Name_Applicant_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Names And</label>
    <type>Text</type>
</CustomField>