force-app/main/default/objects/Individual_Application_Shadow__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>