force-app/main/default/objects/Individual_Application_Shadow__c/fields/Conga_Troubleshooting_Link__c.field-meta.xml
<CustomField>
    <fullName>Conga_Troubleshooting_Link__c</fullName>
    <formula>HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?ServerURL=&quot;+ $Api.Partner_Server_URL_370 + Manual_Provisional_Documents_Generation__c,&quot;Test Conga Trigger via User Interface&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Troubleshooting Link</label>
    <type>Text</type>
</CustomField>