force-app/main/default/objects/Individual_Application_Shadow__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conga needs the Applicant Contact to send Letter of Support, hence the field</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shadow Applications</relationshipLabel>
    <relationshipName>Shadow_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>