force-app/main/default/objects/Individual_Application_Shadow__c/fields/Designated_City__c.field-meta.xml
<CustomField>
    <fullName>Designated_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designated City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>