force-app/main/default/objects/Individual_Application_Shadow__c/fields/Designated_Country__c.field-meta.xml
<CustomField>
    <fullName>Designated_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designated Country</label>
    <length>250</length>
    <type>Text</type>
</CustomField>