force-app/main/default/objects/Individual_Application_Shadow__c/fields/Designated_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Designated_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designated Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>