force-app/main/default/objects/Individual_Application_Shadow__c/fields/Designated_State__c.field-meta.xml
<CustomField>
    <fullName>Designated_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designated State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>