force-app/main/default/objects/Individual_Application_Shadow__c/fields/Designated_Street__c.field-meta.xml
<CustomField>
    <fullName>Designated_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designated Street</label>
    <length>250</length>
    <type>Text</type>
</CustomField>