force-app/main/default/objects/Individual_Application_Shadow__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Typically 6 months from creation date, but will need to move to the next business day if on public holiday or weekend</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>