force-app/main/default/objects/Individual_Application_Shadow__c/fields/Family_Name_Applicant_2__c.field-meta.xml
<CustomField>
    <fullName>Family_Name_Applicant_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family Name Applicant 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>