force-app/main/default/objects/Individual_Application_Shadow__c/fields/First_Extension_Requested__c.field-meta.xml
<CustomField>
    <fullName>First_Extension_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copy field value from Individual Application</description>
    <label>First Extension Requested</label>
    <type>Checkbox</type>
</CustomField>