force-app/main/default/objects/Individual_Application_Shadow__c/fields/Individual_Application__c.field-meta.xml
<CustomField>
    <fullName>Individual_Application__c</fullName>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Shadow Applications</relationshipLabel>
    <relationshipName>Shadow_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>