force-app/main/default/objects/Individual_Application_Shadow__c/fields/Individual_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Individual_Application_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Individual Application Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>