force-app/main/default/objects/Individual_Application_Shadow__c/fields/IndividualApplicationShadow__c.field-meta.xml
<CustomField>
    <fullName>IndividualApplicationShadow__c</fullName>
    <description>##Conga created button:00b4Y000000JCzT</description>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[ParticipationAgreeme]a734Y0000004j6V&quot; +
&quot;&amp;templateid=a7B4Y0000000J8l&quot; +
&quot;&amp;qmode=congasign&quot; +
&quot;&amp;csemail1=&quot; + AccountEmail__c +
&quot;&amp;congasign=SendEmail&quot; +
&quot;&amp;csvisible=1&quot; +
&quot;&amp;csfirst1=Rev&quot; +
&quot;&amp;cslast1=Nayana&quot;</formula>
    <label>IndividualApplicationShadow</label>
    <type>Text</type>
</CustomField>