force-app/main/default/objects/Individual_Application_Shadow__c/fields/Letter_of_Support_Extend_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Support_Extend_Expiry__c</fullName>
    <description>This field is responsible to send email only to Panel Finance Officer.</description>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;DS7=12&quot;+
&quot;&amp;EmailTemplateId=00X2P000000MVSQUA4&quot;+
&quot;&amp;EmailToID=&quot;+Panel_Financier_Contact_Record__c+
&quot;&amp;EmailRelatedToId=&quot;+Id+
&quot;&amp;qmode=SendEmail&quot;+
&quot;&amp;EmailFromID=0D22P00000000qW&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Send Letter of Support to Panel Finance Officer.</inlineHelpText>
    <label>Letter of Support Extend Expiry</label>
    <type>Text</type>
</CustomField>