force-app/main/default/objects/Individual_Application_Shadow__c/fields/Letter_of_Support_Second_Extend_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Support_Second_Extend_Expiry__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=[Revised+Letter+of+Support+Second+Expiry+Extension+ - +Provisional+Approval]a0M5P000001O05BUAS&quot;+
&quot;&amp;DS7=12&quot;+
&quot;&amp;EmailTemplateId=00X2P000000MVSOUA4&quot;+
&quot;&amp;EmailToID=&quot;+ Contact__c +
&quot;&amp;EmailRelatedToId=&quot;+Id+
&quot;&amp;EmailAdditionalTo=&quot;+ApplicantEmail1__c+&quot;,&quot;+ApplicantEmail2__c+&quot;,&quot;+ApplicantEmail3__c+&quot;,&quot;+ApplicantEmail4__c+
&quot;&amp;qmode=SendEmail&quot;+
&quot;&amp;SC0=1&amp;SC1=SalesforceFile&amp;apdf=0&amp;FP0=1&quot;+
&quot;&amp;EmailFromID=0D22P00000000qW&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter of Support Second Extend Expiry</label>
    <type>Text</type>
</CustomField>