force-app/main/default/objects/Individual_Application_Shadow__c/fields/Manual_Provisional_Documents_Generation__c.field-meta.xml
<CustomField>
    <fullName>Manual_Provisional_Documents_Generation__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=[Provisional+Approval+Notice]a0M5P000001O05HUAS,[Letter+of+Support+ - +Provisional+Approval]a0M5P000001O05BUAS,[National+Mortgage+Form+ - +Provisional+Approval]&quot; + Template_ID__c +
&quot;&amp;qmode=SalesforceFile&quot; +
&quot;&amp;DS7=12&quot; +
&quot;&amp;FP0=1&quot; +
&quot;&amp;APDF=0&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manual Provisional Documents Generation</label>
    <type>Text</type>
</CustomField>