force-app/main/default/objects/Individual_Application_Shadow__c/fields/Maximum_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Purchase_Price__c</fullName>
    <label>Maximum Purchase Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>