force-app/main/default/objects/Individual_Application_Shadow__c/fields/Meets_Melb_Geelong_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Meets_Melb_Geelong_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meets Melb/Geelong Criteria</label>
    <type>Checkbox</type>
</CustomField>