force-app/main/default/objects/Individual_Application_Shadow__c/fields/Middle_Name_Applicant_3__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_Applicant_3__c</fullName>
    <description>VHF3279</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle Name Applicant 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>