force-app/main/default/objects/Individual_Application_Shadow__c/fields/Number_Of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Applicants__c</fullName>
    <description>The number of Applicants involved in an application.</description>
    <formula>Individual_Application__r.Number_Of_Applicants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Applicants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>