force-app/main/default/objects/Individual_Application_Shadow__c/fields/Panel_Financier_Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Panel_Financier_Contact_Record__c</fullName>
    <formula>Individual_Application__r.Panel_Finance_Officer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Financier Contact Record</label>
    <type>Text</type>
</CustomField>