force-app/main/default/objects/Individual_Application_Shadow__c/fields/Panel_Financier_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Panel_Financier_First_Name__c</fullName>
    <formula>Individual_Application__r.Panel_Finance_Officer_FirstName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Financier First Name</label>
    <type>Text</type>
</CustomField>