force-app/main/default/objects/Individual_Application_Shadow__c/fields/Panel_Financier_Name__c.field-meta.xml
<CustomField>
    <fullName>Panel_Financier_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Panel Financier Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>