force-app/main/default/objects/Individual_Application_Shadow__c/fields/Participation_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Participation_Agreement__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=[Memorandum+of+Common+Provisions]a0M5P000001O059UAC,[Participation+Agreement]a0M5P000001O05DUAS,[Provisional+Approval+Notice]a0M5P000001O05HUAS,[Letter+of+Support+ - +Provisional+Approval]a0M5P000001O05BUAS,[National+Mortgage+Form+ - +Provisional+Approval]&quot; +Template_ID__c +
&quot;&amp;qmode=SalesforceFile&quot; +
&quot;&amp;DS7=12&quot; +
&quot;&amp;FP0=1&quot; + 
&quot;&amp;APDF=0&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participation_Agreement</label>
    <type>Text</type>
</CustomField>