force-app/main/default/objects/Individual_Application_Shadow__c/fields/Prior_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_Application_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Application Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>