force-app/main/default/objects/Individual_Application_Shadow__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Home</fullName>
            </value>
            <value>
                <fullName>New Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>