force-app/main/default/objects/Individual_Application_Shadow__c/fields/Second_Extension_Requested__c.field-meta.xml
<CustomField>
    <fullName>Second_Extension_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Extension Requested</label>
    <type>Checkbox</type>
</CustomField>