force-app/main/default/objects/Individual_Application_Shadow__c/fields/Shared_Equity_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Shared_Equity_Contribution__c</fullName>
    <label>Shared Equity Contribution</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>