force-app/main/default/objects/Individual_Application_Shadow__c/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <formula>CASE(Individual_Application__r.Number_Of_Applicants__c ,1,&quot;a0M5P000001O05CUAS&quot;,2,&quot;a0M5P000001O05EUAS&quot;,3,&quot;a0M5P000001O05GUAS&quot;,4,&quot;a0M5P000001O05FUAS&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template_ID</label>
    <type>Text</type>
</CustomField>