force-app/main/default/objects/Individual_Application_Shadow__c/fields/Updated_by_Button__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated by Button</label>
    <type>Checkbox</type>
</CustomField>