force-app/main/default/objects/Individual_Application_Shadow__c/fields/VHF_Contribution__c.field-meta.xml
<CustomField>
    <fullName>VHF_Contribution__c</fullName>
    <label>VHF Contribution %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>